# Wraith

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  README.pt-BR.md  SECURITY.md
ci/github-actions/: build-mingw.yml  build-msvc.yml  test-wine.yml
cmake/: options.cmake  version.cmake
cmake/modules/: DetectArch.cmake  HardenFlags.cmake  WineTest.cmake
cmake/toolchains/: mingw-x86_64.cmake  msvc-clang-cl.cmake
doc/: ARCHITECTURE.md  ARCHITECTURE.pt-BR.md  TECHNIQUES.md  TECHNIQUES.pt-BR.md
examples/full_stealth_chain/: CMakeLists.txt  main.c
include/wraith/: wraith.h  wraith_introspect.h  wraith_loader.h  wraith_options.h  wraith_resource.h  wraith_status.h  wraith_stealth.h  wraith_types.h
src/exports/: export_forward.c  export_forward.h  export_lookup.c  export_lookup.h
src/loader/: loader_api.c  loader_entry.c  loader_finalize.c  loader_imports.c  loader_imports_bound.c  loader_imports_delay.c  loader_pipeline.c  loader_pipeline.h  loader_relocs.c  loader_sections.c  loader_seh_x64.c  loader_tls.c
src/mapping/: map_dispatch.c  map_mockingjay.c  map_mockingjay_scanner.c  map_mockingjay_scanner.h  map_phantom.c  map_phantom_host_picker.c  map_phantom_host_picker.h  map_private_rwx.c  map_stomping.c  map_strategy.h
src/pe/: pe_constants.h  pe_image_metrics.c  pe_image_metrics.h  pe_iter.c  pe_iter.h  pe_validate.c  pe_validate.h
src/resource/: resource_find.c  resource_internal.h  resource_load.c  resource_string.c
src/runtime/: rt_api.c  rt_api.h  rt_api_baseline.c  rt_api_ntapi.c  rt_pebwalk.c  rt_pebwalk.h  rt_resolver.c  rt_resolver.h
src/stealth/amsi/: amsi_patch.c  amsi_patch.h
src/stealth/anti_debug/: anti_debug.c  anti_debug.h
src/stealth/etw/: etw_patch.c  etw_patch.h
src/stealth/hashing/: hash_djb2.c  hash_djb2.h
src/stealth/heap_masq/: heap_masq.c  heap_masq.h
src/stealth/host_iat/: host_iat.c  host_iat.h
src/stealth/hwbp/: hwbp.c  hwbp.h
src/stealth/page_guard/: page_guard.c  page_guard.h
src/stealth/peb_link/: peb_link.c  peb_link.h  peb_link_masquerade.c
src/stealth/private_ntdll/: private_ntdll.c  private_ntdll.h
src/stealth/sleep/: sleep.c  sleep.h  sleep_cronos.c  sleep_xor_baseline.c
src/stealth/threadless/: threadless.c  threadless.h
src/stealth/unhook/: unhook.c  unhook.h
src/syscalls/: sc_engine.c  sc_engine.h  sc_gadget_finder.c  sc_gadget_finder.h  sc_ssn_resolver.c  sc_ssn_resolver.h  sc_table.h  sc_trampoline_x64.S
tests/integration/: CMakeLists.txt  test_anti_debug_heap_iat.c  test_etw_amsi_patch.c  test_freshycalls.c  test_hwbp.c  test_load_forwarder.c  test_load_hashed.c  test_load_mockingjay.c  test_load_module_stomping.c  test_load_peb_linkage.c  test_load_phantom.c  test_load_seh.c  test_load_sleep_cronos.c  test_load_sleep_obf.c  test_load_stack_spoof.c  test_load_syscalls.c  test_load_trivial.c  test_page_guard.c  test_private_ntdll.c  test_threadless.c  test_unhook.c
tests/integration/fixtures/forwarder_dll/: CMakeLists.txt  forwarder_dll.def  forwarder_stub.c
tests/integration/fixtures/payload_dll/: CMakeLists.txt  payload.c
tests/integration/fixtures/seh_dll/: CMakeLists.txt  seh_dll.c
tools/: amalgamate.py  api_list.txt  hashgen.py  ioc_audit.py
